--- a/index.html
+++ b/index.html
@@ -239,16 +239,93 @@
                 syncList.push(sync);
             }
         }
+        function trackModel(){
+            var mesh = new THREE.Mesh();
+            var loader = new THREE.GLTFLoader();
+            loader.load('models/untitled3.glb', function (gltf) {
+                function createPhysicsBodyFromGeometry(geometry) {
+
+                    const triangleMesh = new Ammo.btTriangleMesh();
+
+                    const vectA = new Ammo.btVector3(0, 0, 0);
+                    const vectB = new Ammo.btVector3(0, 0, 0);
+                    const vectC = new Ammo.btVector3(0, 0, 0);
+
+                    const verticesPos = geometry.getAttribute('position').array;
+                    const triangles = [];
+                    for (let i = 0; i < verticesPos.length; i += 3) {
+                        triangles.push({
+                            x: verticesPos[i],
+                            y: verticesPos[i + 1],
+                            z: verticesPos[i + 2]
+                        })
+                    }
+
+                    for (let i = 0; i < triangles.length - 3; i += 3) {
+                        vectA.setX(triangles[i].x);
+                        vectA.setY(triangles[i].y);
+                        vectA.setZ(triangles[i].z);
+
+                        vectB.setX(triangles[i + 1].x);
+                        vectB.setY(triangles[i + 1].y);
+                        vectB.setZ(triangles[i + 1].z);
+
+                        vectC.setX(triangles[i + 2].x);
+                        vectC.setY(triangles[i + 2].y);
+                        vectC.setZ(triangles[i + 2].z);
+
+                        triangleMesh.addTriangle(vectA, vectB, vectC, true);
+                    }
+
+                    let shape = new Ammo.btBvhTriangleMeshShape(triangleMesh, true);
+                    geometry.verticesNeedUpdate = true
+                    shape.setMargin(0.05);
+
+                    return shape;
+                }
+                var track = gltf.scene;
+
+                track.scale.set(2, 2, 2);
+                track.position.set(0, 0, 0);
+                track.rotation.set(0, 0, 0);
+                track.traverse(function (child) {
+                    if (child.isMesh) {
+                        child.castShadow = true;
+                        child.receiveShadow = true;
+                    }
+                });
+                const geometry = track.children[2].geometry;
+                let physicsBody = createPhysicsBodyFromGeometry(geometry)
+                let transform = new Ammo.btTransform();
+                transform.setIdentity();
+                transform.setOrigin(new Ammo.btVector3(0, 0, 0));
+                transform.setRotation(new Ammo.btQuaternion(0, 0, 0, 1));
+                let motionState = new Ammo.btDefaultMotionState(transform);
+                let localInertia = new Ammo.btVector3(0, 0, 0);
+                physicsBody.calculateLocalInertia(0, localInertia);
+                let rbInfo = new Ammo.btRigidBodyConstructionInfo(0, motionState, physicsBody, localInertia);
+                let body = new Ammo.btRigidBody(rbInfo);
+                body.setFriction(1);
+                body.setRestitution(0.9);
+                body.setDamping(0.2, 0.2);
+                physicsWorld.addRigidBody(body);
+
+                mesh.add(track);
+
+
+            });
+            scene.add(mesh);
+        }
 
         function createWheelMesh(radius, width) {
-            var t = new THREE.CylinderGeometry(0, 0, width, 24, 1);
+            var t = new THREE.CylinderGeometry(0, 0, 0, 24, 1);
             t.rotateZ(Math.PI / 2);
             var mesh = new THREE.Mesh(t);
             scene.add(mesh);
             var loader = new THREE.GLTFLoader();loader.load('models/wheel.glb', function (gltf) {
                 var wheel = gltf.scene;
                 wheel.scale.set(0.015, 0.015, 0.015);
-                wheel.position.set(0, -.36, 0);
+                wheel.position.set(0, -.34, 0);
                 wheel.rotation.set(0, 0, 0);
                 wheel.traverse(function (child) {
                     if (child.isMesh) {
@@ -256,12 +333,13 @@
                         child.receiveShadow = true;
                     }
                 });
-                console.log(wheel);
                 mesh.add(wheel);
             });
 
             return mesh;
         }
+
+
 
 
         function createVehicle(pos, quat) {
@@ -321,6 +399,7 @@
                 console.log(car);
                 mesh.add(car);
             });
+
 
             scene.add(mesh);
 
@@ -482,6 +561,7 @@
         initPhysics();
         createObjects();
         tick();
+        trackModel();
 
 
     }
