--- a/index.html
+++ b/index.html
@@ -243,46 +243,6 @@
             var mesh = new THREE.Mesh();
             var loader = new THREE.GLTFLoader();
             loader.load('models/untitled3.glb', function (gltf) {
-                function createPhysicsBodyFromGeometry(geometry) {
-
-                    const triangleMesh = new Ammo.btTriangleMesh();
-
-                    const vectA = new Ammo.btVector3(0, 0, 0);
-                    const vectB = new Ammo.btVector3(0, 0, 0);
-                    const vectC = new Ammo.btVector3(0, 0, 0);
-
-                    const verticesPos = geometry.getAttribute('position').array;
-                    const triangles = [];
-                    for (let i = 0; i < verticesPos.length; i += 3) {
-                        triangles.push({
-                            x: verticesPos[i],
-                            y: verticesPos[i + 1],
-                            z: verticesPos[i + 2]
-                        })
-                    }
-
-                    for (let i = 0; i < triangles.length - 3; i += 3) {
-                        vectA.setX(triangles[i].x);
-                        vectA.setY(triangles[i].y);
-                        vectA.setZ(triangles[i].z);
-
-                        vectB.setX(triangles[i + 1].x);
-                        vectB.setY(triangles[i + 1].y);
-                        vectB.setZ(triangles[i + 1].z);
-
-                        vectC.setX(triangles[i + 2].x);
-                        vectC.setY(triangles[i + 2].y);
-                        vectC.setZ(triangles[i + 2].z);
-
-                        triangleMesh.addTriangle(vectA, vectB, vectC, true);
-                    }
-
-                    let shape = new Ammo.btBvhTriangleMeshShape(triangleMesh, true);
-                    geometry.verticesNeedUpdate = true
-                    shape.setMargin(0.05);
-
-                    return shape;
-                }
                 var track = gltf.scene;
 
                 track.scale.set(2, 2, 2);
@@ -295,23 +255,9 @@
                     }
                 });
                 const geometry = track.children[2].geometry;
-                let physicsBody = createPhysicsBodyFromGeometry(geometry)
-                let transform = new Ammo.btTransform();
-                transform.setIdentity();
-                transform.setOrigin(new Ammo.btVector3(0, 0, 0));
-                transform.setRotation(new Ammo.btQuaternion(0, 0, 0, 1));
-                let motionState = new Ammo.btDefaultMotionState(transform);
-                let localInertia = new Ammo.btVector3(0, 0, 0);
-                physicsBody.calculateLocalInertia(0, localInertia);
-                let rbInfo = new Ammo.btRigidBodyConstructionInfo(0, motionState, physicsBody, localInertia);
-                let body = new Ammo.btRigidBody(rbInfo);
-                body.setFriction(1);
-                body.setRestitution(0.9);
-                body.setDamping(0.2, 0.2);
-                physicsWorld.addRigidBody(body);
+                let physicsBody = PhysicsManager.createPhysicsBodyFromGeometry(this.geometry)
 
                 mesh.add(track);
-
 
             });
             scene.add(mesh);
@@ -339,7 +285,46 @@
             return mesh;
         }
 
+        function createPhysicsMeshFromGeometry(geometry) {
 
+            const triangleMesh = new Ammo.btTriangleMesh();
+
+            const vectA = new Ammo.btVector3(0, 0, 0);
+            const vectB = new Ammo.btVector3(0, 0, 0);
+            const vectC = new Ammo.btVector3(0, 0, 0);
+
+            const verticesPos = geometry.getAttribute('position').array;
+            const triangles = [];
+            for (let i = 0; i < verticesPos.length; i += 3) {
+                triangles.push({
+                    x: verticesPos[i],
+                    y: verticesPos[i + 1],
+                    z: verticesPos[i + 2]
+                })
+            }
+
+            for (let i = 0; i < triangles.length - 3; i += 3) {
+                vectA.setX(triangles[i].x);
+                vectA.setY(triangles[i].y);
+                vectA.setZ(triangles[i].z);
+
+                vectB.setX(triangles[i + 1].x);
+                vectB.setY(triangles[i + 1].y);
+                vectB.setZ(triangles[i + 1].z);
+
+                vectC.setX(triangles[i + 2].x);
+                vectC.setY(triangles[i + 2].y);
+                vectC.setZ(triangles[i + 2].z);
+
+                triangleMesh.addTriangle(vectA, vectB, vectC, true);
+            }
+
+            let shape = new Ammo.btBvhTriangleMeshShape(triangleMesh, true);
+            geometry.verticesNeedUpdate = true
+            shape.setMargin(0.05);
+
+            return shape;
+        }
 
 
         function createVehicle(pos, quat) {
